Clean up styles, fix scaling on smaller screens

--- a/_sass/no-theme.scss
+++ b/_sass/no-theme.scss
@@ -1,6 +1,9 @@
+@import "effects";
+@import "device";
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-  margin: 15vw auto;
+  margin: 5vw auto;
   max-width: 50em;
 }
 
@@ -9,7 +12,7 @@ body {
 }
 
 header {
-  margin: 10em auto;
+  margin: 5em auto;
   max-width: 30em;
   text-align: center;
   font-size: 12pt;
@@ -41,19 +44,6 @@ h3 {
   margin-top: 2em;
 }
 
-.shiny {
-  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-  background-size: 200% auto;
-
-  color: #000;
-  background-clip: text;
-  text-fill-color: transparent;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-
-  animation: gradient 15s ease infinite;
-}
-
 a:link {
   color: #252525;
   text-decoration: none;
@@ -76,226 +66,6 @@ a:hover .item {
   background-color: #fcfcfc;
 }
 
-/* Device */
-
-.device-container {
-  height: 64em;
-}
-
-.device {
-  margin: 0 auto;
-  width: 32em;
-  height: 64em;
-}
-
-.statusbar {
-  position: relative;
-  width: 32em;
-  z-index: 4;
-}
-
-#clock {
-  text-align: center;
-  position: absolute;
-  width: 5em;
-  top: 2.5em;
-  left: 2.8em;
-  font-size: 13pt;
-}
-
-#battery {
-  text-align: center;
-  position: absolute;
-  width: 5em;
-  top: 3em;
-  right: 3.2em;
-}
-
-.frame {
-  display: block;
-  position: absolute;
-  margin: auto;
-  left: 0;
-  right: 0;
-  width: inherit;
-  height: inherit;
-  pointer-events: none;
-}
-
-.outline {
-  opacity: 10%;
-  z-index: 3;
-}
-
-.bezels {
-  opacity: 100%;
-  z-index: 2;
-}
-
-.screen {
-  height: inherit;
-  display: block;
-  margin: 0 1.8em;
-  border-radius: 6em;
-  background-color: #fcfcfc;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  z-index: 0;
-}
-
-.navbar {
-  position: sticky;
-  top: 0;
-  padding: 5em 1.8em 0em;
-  height: 4em;
-  border-radius: 3em 3em 0 0;
-  border-bottom: 1pt solid #ededed;
-  z-index: 1;
-}
-
-.navbar h2 {
-  margin-top: 0.8em;
-}
-
-.scrollview {
-  padding: 2em 1.8em 8em;
-  background: #fcfcfc;
-}
-
-.photo-container {
-  position: relative;
-  height: 15em;
-  width: 100%;
-  margin: auto;
-}
-
-.photo {
-  position: absolute;
-  left: 0;
-  right: 0;
-  margin: auto;
-  height: 15em;
-  width: 15em;
-  background-image: url("/assets/memoji.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  z-index: 0;
-}
-
-.photo-background {
-  position: absolute;
-  left: 0;
-  right: 0;
-  margin: auto;
-  height: 15em;
-  width: 15em;
-  border-radius: 7.5em;
-  z-index: 0;
-
-  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-	background-size: 200% auto;
-	animation: gradient 15s ease infinite;
-}
-
-@keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
-}
-
-/* List items */
-
-.item-header {
-  margin-top: 2em;
-}
-
-.item {
-  position: relative;
-  background-color: white;
-  border-radius: 1.2em;
-  margin: 1em 0em;
-  padding: 1.5em;
-  /* border: 1pt solid #ededed; */
-  box-shadow: 0 0.2em 0.5em 0.2em rgba(0, 0, 0, 0.03);
-}
-
-.inline-icon {
-  display: inline-block;
-  vertical-align: middle;
-  text-align: center;
-  line-height: 3em;
-  border-radius: 1.5em;
-  width: 3em;
-  height: 3em;
-}
-
-.inline-text {
-  display: inline-block;
-  margin: auto 1em;
-  vertical-align: middle;
-}
-
-.caption {
-  color: gray;
-  font-size: 11pt;
-}
-
-.tint-green {
-  color: #00b894;
-  background-color: #55efc4;
-}
-
-.tint-blue {
-  color: #00cec9;
-  background-color: #81ecec;
-}
-
-.tint-indigo {
-  color: #0984e3;
-  background-color: #74b9ff;
-}
-
-.tint-purple {
-  color: #6c5ce7;
-  background-color: #a29bfe;
-}
-
-.tint-pink {
-  color: #e84393;
-  background-color: #fd79a8;
-}
-
-.chevron {
-  display: inline-block;
-  position: absolute;
-  right: 2em;
-  top: 50%;
-
-  height: 0.45em;
-  width: 0.45em;
-
-  border-style: solid;
-  border-width: 0.1em 0.1em 0 0;
-  border-color: gray;
-
-	transform: rotate(45deg) translate(0, -50%);
-}
-
-.transluscent {
-  background-color: #fcfcfc;
-  background-color: rgba(252, 252, 252, 0.9);
-  background-blend-mode: lighten;
-  -webkit-backdrop-filter: blur(12px);
-  backdrop-filter: blur(12px);
-}
-
 /* Downscaling */
 
 @media screen and (max-width: 800px) {
@@ -306,14 +76,6 @@ a:hover .item {
   .header {
     max-width: 30em;
   }
-
-  .device-container {
-    height: 56em;
-  }
-
-  .device {
-    transform: scale(0.875) translate(0, -5em);
-  }
 }
 
 @media screen and (max-width: 600px) {
@@ -323,14 +85,6 @@ a:hover .item {
 
    .header {
     max-width: 15em;
-  }
-
-  .device-container {
-    height: 40em;
-  }
-
-  .device {
-    transform: scale(0.625) translate(0, -25em);
   }
 }
 
